[package]
name = "queyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
async-graphql = "3.0.38"
async-graphql-actix-web = "3.0.38"
big_s = "1.0.2"
chrono = "0.4.19"
slugify = "0.1.0"
uuid = {version ="1.0.0", features = ["v4"]}
