[package]
name = "queyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
async-graphql = "3.0.38"
async-graphql-actix-web = "3.0.38"
big_s = "1.0.2"
chrono = "0.4.19"
dirs = "4.0.0"
glob = "0.3.0"
lol_html = "0.3.1"
markdown = "0.3.0"
serde = "1.0.137"
serde_yaml = "0.8.24"
slugify = "0.1.0"
tl = "0.7.5"
